@@ -21,6 +21,7 @@
 
 <ul>
 <li><a href="rdoc/classes/Roda/RodaPlugins/AllVerbs.html">all_verbs</a>: Adds request routing methods for all http verbs.</li>
+<li><a href="rdoc/classes/Roda/RodaPlugins/BacktrackingArray.html">backtracking_array</a>: Allows array matchers to backtrack if later matchers do not match.</li>
 <li><a href="rdoc/classes/Roda/RodaPlugins/Csrf.html">csrf</a>: Adds CSRF protection and helper methods using <a href="https://github.com/baldowl/rack_csrf">rack_csrf</a>.</li>
 <li><a href="rdoc/classes/Roda/RodaPlugins/DefaultHeaders.html">default_headers</a>: Allows modifying the default headers for responses.</li>
 <li><a href="rdoc/classes/Roda/RodaPlugins/ErrorHandler.html">error_handler</a>: Adds ability to automatically handle errors raised by the application.</li>
